# gloves

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  GLOVES_CONFIG_SPEC.md  PLANS.md  README.md  RELEASE.md
.agents/skills/rust/: SKILL.md
.agents/skills/rust/anti-patterns/: SKILL.md
.agents/skills/rust/coding-guidelines/: SKILL.md
.agents/skills/rust/concurrency/: SKILL.md
.agents/skills/rust/error-handling/: SKILL.md
.agents/skills/rust/ownership/: SKILL.md
.agents/skills/rust/performance/: SKILL.md
.agents/skills/rust/type-driven-design/: SKILL.md
.agents/skills/rust/zero-cost-abstractions/: SKILL.md
.codex/skills/refactor/: SKILL.md
.codex/skills/rust/: SKILL.md
.codex/skills/simplify/: SKILL.md
.codex/skills/skill-creator/: SKILL.md
.github/workflows/: ci-cd.yml  ci.yml  coverage.yml  publish.yml  test.yml
crates/gloves-config/: Cargo.toml
crates/gloves-config/src/: config.rs  lib.rs
crates/gloves-core/: Cargo.toml
crates/gloves-core/src/: error.rs  lib.rs  types.rs
docs/: INDEX.md  concepts-and-parts.md  configuration.md  humans-agents-and-gpg.md  quickstart.md  release-binaries.md  secrets-and-requests.md  security-hardening.md  troubleshooting.md  tui-guide.md  vault-exec.md  vm-multi-agent-human-guide.md
scripts/: setup-openclaw.sh
skills/gloves-cli/: CHANGELOG.md  SKILL.md
skills/gloves-cli-usage/: CHANGELOG.md  SKILL.md
skills/gloves-cli-usage/references/: commands.md
skills/gloves-cli/references/: commands.md
skills/gloves-setup-migrate/: CHANGELOG.md  SKILL.md
skills/gloves-setup-migrate/references/: bootstrap.md  migration.md
src/: audit.rs  config.rs  error.rs  fs_secure.rs  lib.rs  main.rs  manager.rs  paths.rs  reaper.rs  registry.rs  types.rs
src/agent/: age_crypto.rs  backend.rs  keys.rs  meta.rs  mod.rs
src/cli/: commands.rs  daemon.rs  mod.rs  navigator.rs  output.rs  runtime.rs  secret_input.rs  vault_cmd.rs
src/human/: backend.rs  mod.rs  pending.rs
src/vault/: config.rs  gocryptfs.rs  manager.rs  mod.rs  reaper.rs  session.rs  types.rs  validation.rs
systemd/: gloves-verify.service  gloves-verify.timer  glovesd.service
tests/: agent_backend.rs  audit_log.rs  cli_integration.rs  config_parser.rs  fs_secure.rs  human_backend_pending.rs  key_derivation.rs  metadata_registry.rs  phase1_types.rs  phase2_keys.rs  phase3_agent_backend.rs  phase4_meta_registry.rs  phase5_human_backend.rs  phase6_manager.rs  phase7_audit.rs  phase8_reaper.rs  phase9_cli.rs  runtime_paths.rs  secrets_manager.rs  setup_openclaw_script.rs  ttl_reaper.rs  types_validation.rs  vault_config_session.rs  vault_driver.rs  vault_manager.rs  vault_reaper.rs
tests/common/: mod.rs
tests/trybuild/: secret_value_traits.rs  secret_value_traits.stderr
