[workspace]
members = ["crates/gloves-core"]
resolver = "2"

[workspace.package]
version = "0.5.6"
edition = "2021"
license = "MIT"
repository = "https://github.com/heyAyushh/gloves"

[package]
name = "gloves"
version.workspace = true
edition.workspace = true
description = "seamless secret manager and handoff"
license.workspace = true
repository.workspace = true
keywords = ["secrets", "security", "agent", "rage"]
categories = ["command-line-utilities", "cryptography"]

[dependencies]
gloves-core = { path = "crates/gloves-core" }
gloves-config = { path = "crates/gloves-config" }

age = "0.11.2"
atty = "0.2"
chrono = { version = "0.4.43", features = ["serde"] }
clap = { version = "4.5.58", features = ["derive"] }
crossterm = "0.29.0"
ed25519-dalek = "2"
hkdf = "0.12.4"
hmac = "0.12.1"
libc = "0.2.177"
rand = "0.10.0"
ratatui = "0.29.0"
secrecy = "0.10.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
shlex = "1.3.0"
sha2 = "0.10.9"
toml = "1.0.1"
tracing = "0.1"
uuid = { version = "1.20.0", features = ["serde", "v4"] }
zeroize = { version = "1.8.2", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.1.2"
hex = "0.4.3"
tempfile = "3.25.0"
trybuild = "1.0.116"
predicates = "3.1.4"

[[bin]]
name = "gloves"
path = "src/main.rs"
