[package]
name = "gloves-core"
version = "0.5.6"
edition = "2021"
description = "Core types and errors for gloves"
license = "MIT"

[dependencies]
chrono = { version = "0.4.43", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
uuid = { version = "1.20.0", features = ["serde", "v4"] }
zeroize = { version = "1.8.2", features = ["derive"] }
secrecy = "0.10.3"
